<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detailImageId"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:contentDescription="@string/foodimage"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/pizza" />

            <TextView
                android:id="@+id/foodNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false"
                android:padding="5dp"
                android:shadowColor="#FFFFFF"
                android:text="@string/pizza"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#191717"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="#DDDDDD"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/substract"
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart= "2dp"
                    android:contentDescription="@string/substract_image"
                    app:srcCompat="@drawable/icons_minus_sign_24" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/quantity"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="2dp"
                    android:contentDescription="@string/addimagebutton"
                    app:srcCompat="@drawable/icons_add_48" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/foodDeatilDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/allerta"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/food_description"
            android:textAlignment="center"
            android:textColor="#A3A0A0"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:textColorHint="?android:attr/textColorHint" />

        <EditText
            android:id="@+id/editTextPhone2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/allerta"
            android:gravity="center_horizontal"
            android:text="@string/price"
            android:textColor="#191818"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollarSign"
                    android:textColor="#A6352C"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_price"
                    android:textColor="#A6352C"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/orderBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_background"
            android:backgroundTint="@color/gradientEndColor"
            android:text="@string/order_now"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            android:textStyle="bold"
            app:rippleColor="@color/white" />

    </LinearLayout>
</LinearLayout>